# OmniTool

./: .dockerignore  .env.example  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  deploy.yml  release-desktop.yml  version-tag.yml
apps/desktop/: package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/icons/android/values/: ic_launcher_background.xml
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: eslint.config.mjs  instrumentation.ts  middleware.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.sw.json  vercel-build.sh  vercel.json  vitest.config.ts
apps/web/app/: globals.css  (+3 more)
docs/research/: 01-automation-ai-agents.md  02-project-management.md  03-third-party-integrations.md  04-ui-enhancements.md  05-debugging-observability.md  README.md  coding-agents-slack-linear-jira-notion.md
infra/powersync/: sync-rules.yaml
scripts/: build-desktop-macos-signed.sh  desktop-before-build.mjs  desktop-install-env.sh  download-node-binary.mjs  install-desktop-macos.sh  notarize-dmg.sh  set-app-version.mjs  sign-native-deps.sh  use-local-db.sh  use-supabase-db.sh
supabase/: config.toml
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 001_rls_policies.sql  002_encryption.sql  003_realtime_notes.sql  20260506_fulltext_search.sql
(+312 files in other folders)
