[package]
name = "omnitool-desktop"
version = "0.0.1"
description = "OmniTool desktop shell"
authors = ["Reunify"]
edition = "2021"

[lib]
name = "omnitool_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
