[package]
name = "omnitool-desktop"
version = "0.0.1"
description = "OmniTool desktop shell"
authors = ["Reunify"]
edition = "2021"

[lib]
name = "omnitool_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
